/*
 * $Id: ChangeLog,v 1.4632 2005/11/16 12:16:27 druzus Exp $
 */

/* Use this format for the entry headers:
   YYYY-MM-DD HH:MM UTC[-|+]hhmm Your Full Name <your_email@address>
   For example:
   2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
*/

2005-11-16 13:35 UTC+0100 Przemyslaw Czerpak (druzus/at/priv.onet.pl)
  * xharbour/bin/pack_src.bat
  * xharbour/bin/pack_src.sh
    * updated for nulsys.prg -> nulsys.c modification

2005-11-16 13:14 UTC+0100 Przemyslaw Czerpak (druzus/at/priv.onet.pl)
  * xharbour/include/hbvmpub.h
    * changed the order of members in hb_struString to safe four bytes
      on Win64
    * changed definition of HB_SYMB structure.
          HB_SYMBOLSCOPE    cScope
      replaced by:
         union
         {
            HB_SYMBOLSCOPE    value;      /* the scope of the symbol */
            void *            pointer;    /* filler to force alignment */
         } scope;
      This modification should only force the same alignment independently
      on used compiler switched or executed #pragma pack*
      It's important to keep this structure with fixed size because it's
      used in .c files generated from .prg code.
      The code with #pragma pack* commented out - it should not be longer
      necessary but please make a real tests with different compiler
      alignment switches

  * xharbour/source/compiler/genc.c
  * xharbour/contrib/libnf/fttext.c
  * xharbour/contrib/rdd_ads/ads1.c
  * xharbour/source/rdd/dbf1.c
  * xharbour/source/rdd/delim1.c
  * xharbour/source/rdd/sdf1.c
  * xharbour/source/rdd/dbfcdx/dbfcdx1.c
  * xharbour/source/rdd/dbfdbt/dbfdbt1.c
  * xharbour/source/rdd/dbffpt/dbffpt1.c
  * xharbour/source/rdd/dbfntx/dbfntx1.c
  * xharbour/source/rtl/version.c
  * xharbour/source/vm/classes.c
  * xharbour/source/vm/cmdarg.c
  * xharbour/source/vm/dynsym.c
  * xharbour/source/vm/hvm.c
  * xharbour/source/vm/initsymb.c
  * xharbour/source/vm/runner.c
  * xharbour/utils/xbscript/xbs_harb.ch