@@ -1,5 +1,5 @@
 /*
- * $Id: ChangeLog,v 1.4632 2005/11/16 12:16:27 druzus Exp $
+ * $Id: ChangeLog,v 1.4633 2005/11/16 12:36:51 druzus Exp $
  */
 
 /* Use this format for the entry headers:
@@ -7,6 +7,12 @@
    For example:
    2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
 */
+
+2005-11-16 14:11 UTC+0100 Przemyslaw Czerpak (druzus/at/priv.onet.pl)
+  * xharbour/bin/pack_src.sh
+    * updated for fmstat lib
+  * xharbour/source/vm/fmstat/Makefile
+    * minor modification
 
 2005-11-16 13:35 UTC+0100 Przemyslaw Czerpak (druzus/at/priv.onet.pl)
   * xharbour/bin/pack_src.bat
